--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -12,7 +12,7 @@
 --------------------------------------------------------------*/
 /* Fonts */
 :root {
-  --default-font: "Roboto",  system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  --default-font: "Poppins",  sans-serif;
   --heading-font: "Poppins",  sans-serif;
   --nav-font: "Poppins",  sans-serif;
 }
